--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "file-loader": "^4.3.0",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
     "sass-loader": "^7.3.1",
-    "vue-template-compiler": "^2.6.11",
+    "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.46.0"
   },
   "eslintConfig": {
