--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "serve": "^11.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -25,6 +26,7 @@
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
     "sass-loader": "^7.3.1",
+    "v-scroll-lock": "^1.3.1",
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.46.0"
