--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@egjs/flicking-plugins": "^3.3.0",
     "core-js": "^3.6.5",
     "serve": "^11.3.2",
     "vue": "^2.6.11",
+    "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@egjs/vue-flicking": "^3.6.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
