--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@egjs/flicking-plugins": "^3.3.0",
     "core-js": "^3.6.5",
+    "hooper": "^0.3.4",
     "serve": "^11.3.2",
     "vue": "^2.6.11",
     "vue-property-decorator": "^8.5.1",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@egjs/vue-flicking": "^3.6.0",
+    "@splidejs/vue-splide": "^0.3.5",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
