--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "serve": "^11.3.2",
     "vue": "^2.6.11",
     "vue-property-decorator": "^8.5.1",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-star-rating": "^1.7.0"
   },
   "devDependencies": {
     "@egjs/vue-flicking": "^3.6.0",
