--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vue": "^2.6.11",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.2.0",
-    "vue-star-rating": "^1.7.0"
+    "vue-simple-progress": "^1.1.1",
+    "vue-star-rating": "^1.7.0",
+    "vuejs-progress-bar": "^1.2.4"
   },
   "devDependencies": {
     "@egjs/vue-flicking": "^3.6.0",
