--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^3.2.0",
     "vue-simple-progress": "^1.1.1",
     "vue-star-rating": "^1.7.0",
+    "vue-sticky-directive": "^0.0.10",
     "vuejs-progress-bar": "^1.2.4"
   },
   "devDependencies": {
