--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "core-js": "^3.6.5",
     "hooper": "^0.3.4",
     "serve": "^11.3.2",
+    "v-money": "^0.8.1",
     "vue": "^2.6.11",
+    "vue-multiselect": "^2.1.6",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.2.0",
     "vue-simple-progress": "^1.1.1",
     "vue-star-rating": "^1.7.0",
     "vue-sticky-directive": "^0.0.10",
+    "vue-the-mask": "^0.11.1",
     "vuejs-progress-bar": "^1.2.4"
   },
   "devDependencies": {
