--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-star-rating": "^1.7.0",
     "vue-sticky-directive": "^0.0.10",
     "vue-the-mask": "^0.11.1",
+    "vue-tippy": "^4.10.0",
     "vuejs-progress-bar": "^1.2.4"
   },
   "devDependencies": {
