--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "serve": "^11.3.2",
     "v-money": "^0.8.1",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-multiselect": "^2.1.6",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.2.0",
