--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "v-money": "^0.8.1",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
+    "vue-js-modal": "^2.0.0-rc.3",
     "vue-multiselect": "^2.1.6",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.2.0",
