--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "pug-plain-loader": "^1.1.0",
     "sass-loader": "^7.3.1",
     "v-scroll-lock": "^1.3.1",
+    "vue-renderless-wizard": "^1.0.8",
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.12",
+    "vue-verification-code-input": "^1.0.0",
     "webpack": "^4.46.0"
   },
   "eslintConfig": {
