--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@egjs/vue-flicking": "^3.6.0",
     "@splidejs/vue-splide": "^0.3.5",
+    "@techassi/vue-youtube-iframe": "^1.0.6",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -42,6 +43,7 @@
     "sass-loader": "^7.3.1",
     "v-scroll-lock": "^1.3.1",
     "vue-js-modal": "^2.0.0-rc.6",
+    "vue-radial-progress": "^0.3.2",
     "vue-renderless-wizard": "^1.0.8",
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.12",
